spec: Change product use, fixes Issue #5
Changed the product use from "IDE" to "Learning Tool".

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -84,13 +84,13 @@ Die Software ist nicht für professionelle Anwendungszwecke ausgelegt.
 
 Das Produkt soll als graphisches Prolog-Lerntool betrieben werden.
 
-Die Zielgruppe des Lerntools sind Studierende und Enthusiasten.
+Die Zielgruppe des Lerntools sind Lehrende, Studierende und Enthusiasten.
 
 Das Produkt soll sich auf eine Teilmenge der Prolog-Sprache beschränken, diese jedoch voll unterstützen.
 
-Das Produkt soll für die Teilmenge der Sprache eine integrierte Entwicklungsumgebung darstellen.
+Das Produkt soll für die Teilmenge der Sprache eine Lernhilfe sein und das Verständnis für die Funktionsweise von Prolog, mit Hilfe von schrittweiser Visualisierung, stärken.
 
-Neben einer Entwicklungsumgebung für die unterstützte Teilmenge von Prolog stehen Visualisierungs-Features zum Verständnis der Sprachumsetzung zur Verfügung.
+Trotzdem ist es möglich ein geladenes Prolog-Programm mit einem eingebauten Editor anzupassen und/oder zu erweitern.
 
 \section{Produktumgebung}
 
