--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -55,69 +55,69 @@ Einleitende Worte.
 % Verweis auf Glossareintrag
 Das Programm kann eine Teilmenge der Prologsprache interpretieren.
 
-\criterium{Listen}
+\criterium{Listen}{crt:lists}
 
-Das Programm unterstützt die Darstellung von Listen. Die leere Liste wird durch "[]" dargestellt, eine Liste mit Inhalt wird durch "[1,2,3]" dargestellt und intern als Listenkopf und "Restliste" behandelt, das heißt:\newline
-Liste: "[1,2,3]"\newline
-In Prolog: "[1|teilliste1]", teilliste1= "[2|teilliste2]", teilliste2=[3]
+Das Programm unterstützt die Darstellung von Listen. Die leere Liste wird durch \enquote{[]} dargestellt, eine Liste mit Inhalt wird durch \enquote{[1,2,3]} dargestellt und intern als Listenkopf und \enquote{Restliste} behandelt, das heißt:\newline
+Liste: \enquote{[1,2,3]}\newline
+In Prolog: \enquote{[1|teilliste1]}, teilliste1= \enquote{[2|teilliste2]}, teilliste2=[3]
 
-\criterium{Visualisierung}
+\criterium{Visualisierung}{crt:visualization}
 
 % Verweise auf GUI
 Das Programm kann Abfragen zu einem Prolog-Programm mit Hilfe eines Graphen visualisieren. Dieser hat eine Baumstruktur und beinhaltet für jeden Abarbeitungsschritt einen eigenen Knoten.
 
-\criterium{Einzelschritt-Interpreter}
+\criterium{Einzelschritt-Interpreter}{crt:interpreter}
 
 % Verweis auf GUI und mögliche Anpassung des Buttonnamens
 Das Programm bearbeitet Anfragen schrittweise. Nach jedem durchgeführten Teilschritt einer Abfrage wartet das Programm auf Interaktion vom Nutzer (drücken des "Verarbeiten" Buttons) bis es den nächsten Teilschritt bearbeitet.
 
-\criterium{Laden}
+\criterium{Laden}{crt:open}
 
 Das Programm soll bereits vorhandene Prolog-Programme laden können, damit auf diesen Abfragen durchgeführt und diese visualisiert werden können.
 
-\criterium{Speichern}
+\criterium{Speichern}{crt:save}
 
 Das Programm soll Änderungen am momentan geladenen Prolog-Programm speichern können. Dabei soll geprüft werden ob das Prolog-Programm seit dem Laden schon anderweitig verändert wurde und sollte dies der Fall sein wird eine Warnung ausgegeben.
 
-\criterium{Abbrechen}
+\criterium{Abbrechen}{crt:cancel}
 
 % Verweis auf GUI
-Das Abarbeiten eines Teilschritts soll durch einen Knopfdruck abgebrochen werden können, falls dieser z.B. viele Rekusrionen beinhaltet und deswegen eine lange Bearbeitungszeit hat.
+Das Abarbeiten eines Teilschritts soll durch einen Knopfdruck abgebrochen werden können, falls dieser z.B. viele Rekursionen beinhaltet und deswegen eine lange Bearbeitungszeit hat.
 
 \subsection{Kann}
 
-\criteriumOptional{Zurückschreiten}
+\criteriumOptional{Zurückschreiten}{crt:stepback}
 
 % Verweis auf GUI
 Das Programm soll es dem Nutzer ermöglichen die letzten 5 Schritte schrittweise zurückzugehen um z.B. Zustandsunterschiede im Graphen besser erklären zu können.
 
-\criteriumOptional{Ausführung bis zur nächsten Ausgabe}
+\criteriumOptional{Ausführung bis zur nächsten Ausgabe}{crt:continueto}
 
 % Verweis auf GUI
 Das Programm soll durch einen extra Knopf bis zur nächsten Ausgabe ausgeführt werden können.
 
-\criteriumOptional{X Ausführungen}
+\criteriumOptional{X Ausführungen}{crt:multistep}
 
 % Verweis auf GUI
 Das Programm soll durch einen extra Knopf X Schritte auf einmal ausführen.
 
-\criteriumOptional{Cut}
+\criteriumOptional{Cut}{crt:cut}
 
-Das Programm soll die "Cut"-Funktionalität unterstützen, mit der der Nutzer dem Programm, durch das Hinzufügen eines "!" am Ende einer oder mehrerer Regeln bzw. Ziele, verbieten kann bei der Abarbeitung auf diese Regel(-n)/Ziele zurückzuspringen.
+Das Programm soll die "Cut"-Funktionalität unterstützen, mit der der Nutzer dem Programm, durch das Hinzufügen eines "!" am Ende einer oder mehrerer Regeln bzw. Ziele, verbieten kann bei der Abarbeitung auf diese Regel(-n)/Ziele zurück zu springen.
 
-\criteriumOptional{Arithmetik}
+\criteriumOptional{Arithmetik}{crt:maths}
 
-Das Programm soll grundlegende Arithmetik unterstützen. Da Terme in Prolog nur für sich selber stehen können Abfragen wie "4 = 1 + 3" nicht bearbeitet werden. Daher wird das Programm um einen Term "is" erweitert welcher solche arithmetischen Abfragen ermöglicht.
+Das Programm soll grundlegende Arithmetik unterstützen. Da Terme in Prolog nur für sich selber stehen können Abfragen wie "4 = 1 + 3" nicht bearbeitet werden. Daher wird das Programm um einen Term \enquote{is} erweitert welcher solche arithmetischen Abfragen ermöglicht.
 
-\criteriumOptional{Standardbibliothek}
+\criteriumOptional{Standardbibliothek}{crt:standardlib}
 
 Das Programm soll eine kleine Standardbibliothek mit nützlichen, vordefinierten, Regeln unterstützen die standardmäßig beim Starten des Programms mit eingebunden wird.
 
-\criteriumOptional{Standardbibliothek deaktivieren}
+\criteriumOptional{Standardbibliothek deaktivieren}{crt:disablelib}
 
 Das Programm soll es dem Nutzer ermöglichen die eingebundene Standardbibliothek deaktivieren zu können.
 
-\criteriumOptional{Export von Visualisierungsbäumen als LaTeX-Code}
+\criteriumOptional{Export von Visualisierungsbäumen als LaTeX-Code}{crt:latex}
 
 Das Programm kann einen Visualisierungsbaum als LaTeX-Code exportieren, damit dieser vereinfacht in Dokumente eingebunden werden kann.
 
@@ -125,15 +125,15 @@ Das Programm kann einen Visualisierungsbaum als LaTeX-Code exportieren, damit di
 
 Das Programm kann einen Visualisierungsbaum als Bilddatei im SVG/PNG-Format exportieren.
 
-\criteriumOptional{Syntaxhighlighting}
+\criteriumOptional{Syntaxhighlighting}{crt:syntaxhighlighting}
 
 Das Programm soll das farbliche hervorheben bestimmter Regeln und ihres/ihrer korrepsondieren Knoten in der Visualisierung unterstützen.
 
-\criteriumOptional{"Pretty-Printing" von Listen}
+\criteriumOptional{"Pretty-Printing" von Listen}{crt:prettyprinting}
 
 Das Programm soll Listen bei der Ausgabe einheitlich auf "[x,y,z]" formatieren.
 
-\criteriumOptional{Touch-Bedienung}
+\criteriumOptional{Touch-Bedienung}{crt:touch}
 
 Das Programm soll Berührungsgesten wie z.B. das Zoomen durch zwei Finger unterstützen.
 
