spec: Change last line to be more consistent
Last line is now more consistent with the other 4 lines from this
section

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -90,7 +90,7 @@ Das Produkt soll sich auf eine Teilmenge der Prolog-Sprache beschränken, diese 
 
 Das Produkt soll für die Teilmenge der Sprache eine Lernhilfe sein und das Verständnis für die Funktionsweise von Prolog, mit Hilfe von schrittweiser Visualisierung, stärken.
 
-Trotzdem ist es möglich ein geladenes Prolog-Programm mit einem eingebauten Editor anzupassen und/oder zu erweitern.
+Das Produkt ermöglicht es mit Hilfe eines eingebauten Editors Prolog-Programm zu bearbeiten und zu erweitern.
 
 \section{Produktumgebung}
 
